# checkers

./: .gitignore  CMakeLists.txt  Checks.sln  Checks.vcxproj  Checks.vcxproj.filters  README.md  font_data.cpp  main.cpp  socket_manager.cpp  socket_manager.h  storage.cpp  storage.h
src/: main.cpp  socket_manager.cpp  socket_manager.h
x64/Debug Dynamic/: vc141.idb
x64/Debug Dynamic/Checks.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Checks.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
